* Display other player rolls: dices will be displayed with the color associated to the player. * Animation speed: ability to change the speed to 2x or 3x, for players eager to see the result ;) * Performance optimization attempt on slow pc using an adaptive time step (less frame rate). * Added to the API parameters for private and blind rolls (see docs on gitlab). * Fix a bug on blind rolls. * Fix a bug on initiative roll. Due to integration incompatibilities, dices will not be displayed on initiative rolls. * Resizing of the roll area to exclude the sidebar, so as not to accidentally cover the chat result.

--- a/module/lang/it.json
+++ b/module/lang/it.json
@@ -13,6 +13,10 @@
     "DICESONICE.size": "Scale Manuale",
     "DICESONICE.None": "Nessuno",
     "DICESONICE.FadeOut": "Dissolvenza",
+    "DICESONICE.speed": "Velocità Animazione",
+    "DICESONICE.NormalSpeed": "Normale",
+    "DICESONICE.2xSpeed": "2x",
+    "DICESONICE.3xSpeed": "3x",
     "DICESONICE.Save": "Salva",
     "DICESONICE.Apply": "Applica"
 }
