--- a/module/lang/en.json
+++ b/module/lang/en.json
@@ -13,6 +13,10 @@
     "DICESONICE.size": "Manual Scale",
     "DICESONICE.None": "None",
     "DICESONICE.FadeOut": "FadeOut",
+    "DICESONICE.speed": "Animation Speed",
+    "DICESONICE.NormalSpeed": "Normal",
+    "DICESONICE.2xSpeed": "2x",
+    "DICESONICE.3xSpeed": "3x",
     "DICESONICE.Save": "Save",
     "DICESONICE.Apply": "Apply"
 
