- fix issues on gmroll/blindroll/selfroll - move the setting button under the Dice So Nice section - adds the possibility to change the frame rate to improve performances in less powerful machines

--- a/module/lang/en.json
+++ b/module/lang/en.json
@@ -17,6 +17,7 @@
     "DICESONICE.NormalSpeed": "Normal",
     "DICESONICE.2xSpeed": "2x",
     "DICESONICE.3xSpeed": "3x",
+    "DICESONICE.fps": "Max FPS",
     "DICESONICE.Save": "Save",
     "DICESONICE.Apply": "Apply"
 
