--- a/module/lang/it.json
+++ b/module/lang/it.json
@@ -17,6 +17,7 @@
     "DICESONICE.NormalSpeed": "Normale",
     "DICESONICE.2xSpeed": "2x",
     "DICESONICE.3xSpeed": "3x",
+    "DICESONICE.fps": "FPS Massimi",
     "DICESONICE.Save": "Salva",
     "DICESONICE.Apply": "Applica"
 }
