Rewriting done. Textures, colorset, shared settings and more

--- a/module/lang/en.json
+++ b/module/lang/en.json
@@ -18,6 +18,58 @@
     "DICESONICE.2xSpeed": "2x",
     "DICESONICE.3xSpeed": "3x",
     "DICESONICE.Save": "Save",
-    "DICESONICE.Apply": "Apply"
+    "DICESONICE.Apply": "Apply",
+    "DICESONICE.outlineColor": "Outline Color",
+    "DICESONICE.texture": "Texture",
+    "DICESONICE.colorset" : "Theme",
+    "DICESONICE.colorsetDesc" : "If you prefer a custom color, select 'Custom' in this list",
+    "DICESONICE.Low" : "Low",
+    "DICESONICE.High" : "High",
+    "DICESONICE.shadowQuality" : "Shadows Quality",
+    "DICESONICE.sounds" : "Sound Effects",
 
+    "DICESONICE.TextureClouds" : "Clouds",
+    "DICESONICE.TextureFire" : "Fire",
+    "DICESONICE.TextureMarble" : "Marble",
+    "DICESONICE.TextureWater" : "Water",
+    "DICESONICE.TextureIce" : "Ice",
+    "DICESONICE.TexturePaper" : "Paper",
+    "DICESONICE.TextureSpeckles" : "Speckles",
+    "DICESONICE.TextureGlitter" : "Glitter",
+    "DICESONICE.TextureGlitterTransparent" : "Glitter (Transparent)",
+    "DICESONICE.TextureStars" : "Stars",
+    "DICESONICE.TextureStainedGlass" : "Stained Glass",
+    "DICESONICE.TextureSkulls" : "Skulls",
+    "DICESONICE.TextureLeopard" : "Leopard",
+    "DICESONICE.TextureTiger" : "Tiger",
+    "DICESONICE.TextureCheetah" : "Cheetah",
+    "DICESONICE.TextureAstralSea" : "Astral Sea",
+    "DICESONICE.TextureNone" : "None / Auto (Theme)",
+    "DICESONICE.ColorRadiant" : "Radiant",
+    "DICESONICE.ColorFire" : "Fire",
+    "DICESONICE.ColorIce" : "Ice",
+    "DICESONICE.ColorPoison" : "Poison",
+    "DICESONICE.ColorAcid" : "Acid",
+    "DICESONICE.ColorThunder" : "Thunder",
+    "DICESONICE.ColorLightning" : "Lightning",
+    "DICESONICE.ColorAir" : "Air",
+    "DICESONICE.ColorWater" : "Water",
+    "DICESONICE.ColorEarth" : "Earth",
+    "DICESONICE.ColorForce" : "Force",
+    "DICESONICE.ColorPsychic" : "Psychic",
+    "DICESONICE.ColorNecrotic" : "Necrotic",
+    "DICESONICE.ColorPastelSunset" : "Pastel Sunset",
+    "DICESONICE.ColorPinkDreams" : "Pink Dreams",
+    "DICESONICE.ColorInspired" : "Inspired",
+    "DICESONICE.ColorBloodMoon" : "Blood Moon",
+    "DICESONICE.ColorStaryNight" : "Stary Night",
+    "DICESONICE.ColorGlitterParty" : "Glitter Party",
+    "DICESONICE.ColorAstralSea" : "Astral Sea",
+    "DICESONICE.ColorTigerKing" : "Tiger King",
+    "DICESONICE.ColorToxic" : "Toxic",
+    "DICESONICE.ColorRainblow" : "Rainblow",
+    "DICESONICE.ColorRaNdOm" : "Random",
+    "DICESONICE.ColorBlack" : "Black",
+    "DICESONICE.ColorWhite" : "White",
+    "DICESONICE.ColorCustom" : "Custom"
 }
