--- a/module/lang/it.json
+++ b/module/lang/it.json
@@ -19,5 +19,60 @@
     "DICESONICE.3xSpeed": "3x",
     "DICESONICE.fps": "FPS Massimi",
     "DICESONICE.Save": "Salva",
-    "DICESONICE.Apply": "Applica"
+    "DICESONICE.Apply": "Applica",
+    "DICESONICE.outlineColor": "Colore Contorno",
+    "DICESONICE.texture": "Texture",
+    "DICESONICE.colorset" : "Tema",
+    "DICESONICE.colorsetDesc" : "Se preferisci un colore personalizzato, seleziona \"Personalizzato\" in questo elenco",
+    "DICESONICE.Low" : "Bassa",
+    "DICESONICE.High" : "Alta",
+    "DICESONICE.shadowQuality" : "Qualità Ombre",
+    "DICESONICE.sounds" : "Effetti Sonori",
+
+    "DICESONICE.TextureClouds" : "Nuvole",
+    "DICESONICE.TextureFire" : "Fuoco",
+    "DICESONICE.TextureMarble" : "Marmo",
+    "DICESONICE.TextureWater" : "Acqua",
+    "DICESONICE.TextureIce" : "Ghiaccio",
+    "DICESONICE.TexturePaper" : "Carta",
+    "DICESONICE.TextureSpeckles" : "Macchie",
+    "DICESONICE.TextureGlitter" : "Glitter",
+    "DICESONICE.TextureGlitterTransparent" : "Glitter (Trasparente)",
+    "DICESONICE.TextureStars" : "Stelle",
+    "DICESONICE.TextureStainedGlass" : "Vetro colorato",
+    "DICESONICE.TextureSkulls" : "Teschi",
+    "DICESONICE.TextureLeopard" : "Leopardo",
+    "DICESONICE.TextureTiger" : "Tigre",
+    "DICESONICE.TextureCheetah" : "Ghepardo",
+    "DICESONICE.TextureAstralSea" : "Nebulosa",
+    "DICESONICE.TextureWood" : "Legno",
+    "DICESONICE.TextureMetal" : "Metallo",
+    "DICESONICE.TextureNone" : "Nessuna/Auto (Tema)",
+    "DICESONICE.ColorRadiant" : "Radiant",
+    "DICESONICE.ColorFire" : "Fire",
+    "DICESONICE.ColorIce" : "Ice",
+    "DICESONICE.ColorPoison" : "Poison",
+    "DICESONICE.ColorAcid" : "Acid",
+    "DICESONICE.ColorThunder" : "Thunder",
+    "DICESONICE.ColorLightning" : "Lightning",
+    "DICESONICE.ColorAir" : "Air",
+    "DICESONICE.ColorWater" : "Water",
+    "DICESONICE.ColorEarth" : "Earth",
+    "DICESONICE.ColorForce" : "Force",
+    "DICESONICE.ColorPsychic" : "Psychic",
+    "DICESONICE.ColorNecrotic" : "Necrotic",
+    "DICESONICE.ColorPastelSunset" : "Pastel Sunset",
+    "DICESONICE.ColorPinkDreams" : "Pink Dreams",
+    "DICESONICE.ColorInspired" : "Inspired",
+    "DICESONICE.ColorBloodMoon" : "Blood Moon",
+    "DICESONICE.ColorStaryNight" : "Stary Night",
+    "DICESONICE.ColorGlitterParty" : "Glitter Party",
+    "DICESONICE.ColorAstralSea" : "Astral Sea",
+    "DICESONICE.ColorTigerKing" : "Tiger King",
+    "DICESONICE.ColorToxic" : "Toxic",
+    "DICESONICE.ColorRainblow" : "Rainblow",
+    "DICESONICE.ColorRaNdOm" : "Random",
+    "DICESONICE.ColorBlack" : "Black",
+    "DICESONICE.ColorWhite" : "White",
+    "DICESONICE.ColorCustom" : "Personalizzato"
 }
