Added Edge color + API for textured face + custom textured face

--- a/module/lang/en.json
+++ b/module/lang/en.json
@@ -21,6 +21,7 @@
     "DICESONICE.Save": "Save",
     "DICESONICE.Apply": "Apply",
     "DICESONICE.outlineColor": "Outline Color",
+    "DICESONICE.edgeColor": "Edge Color",
     "DICESONICE.texture": "Texture",
     "DICESONICE.colorset" : "Theme",
     "DICESONICE.colorsetDesc" : "If you prefer a custom color, select 'Custom' in this list",
