Added "dot" system

--- a/module/lang/en.json
+++ b/module/lang/en.json
@@ -85,5 +85,6 @@
     "DICESONICE.AcquiredTaste" : "Acquired Taste",
     "DICESONICE.Colors" : "Colors",
 
-    "DICESONICE.System.Standard" : "Standard"
+    "DICESONICE.System.Standard" : "Standard",
+    "DICESONICE.System.Dot" : "Dot"
 }
