--- a/module/lang/en.json
+++ b/module/lang/en.json
@@ -29,7 +29,7 @@
     "DICESONICE.High" : "High",
     "DICESONICE.shadowQuality" : "Shadows Quality",
     "DICESONICE.sounds" : "Sound Effects",
-    "DICESONICE.system" : "System",
+    "DICESONICE.system" : "Dice Presets (Faces)",
 
     "DICESONICE.TextureClouds" : "Clouds",
     "DICESONICE.TextureFire" : "Fire",
