- New integration: removed the toMessage hack in favor of a lighter management through the 'createChatMessage' hook - Moved the appaerance settings to the user entity - Migration of old 1.0 setting to the new 2.0

--- a/module/lang/en.json
+++ b/module/lang/en.json
@@ -33,7 +33,8 @@
     "DICESONICE.system" : "Dice Presets (Faces)",
     "DICESONICE.maxDiceNumber" : "Max Number of Dice",
     "DICESONICE.maxDiceNumberHint" : "Maximum number of displayed dice in an animation. Higher numbers will reduce performances",
-    "DICESONICE.saveMessage": "Updated 3D Dice Settings Configuration.",
+    "DICESONICE.saveMessage": "Updated 3D Dice Settings Configuration",
+    "DICESONICE.migrateMessage": "'Dice So Nice' setting was successfully migrated to 2.0 version!",
 
     "DICESONICE.TextureClouds" : "Clouds",
     "DICESONICE.TextureFire" : "Fire",
