- showForRoll synchronization socket restored, controllable by parameter: game.dice3d.showForRoll(new Roll('1d20'), whoRoll, synchronize, whoSee).

--- a/module/lang/en.json
+++ b/module/lang/en.json
@@ -53,7 +53,7 @@
     "DICESONICE.TextureCheetah" : "Cheetah",
     "DICESONICE.TextureAstralSea" : "Astral Sea",
     "DICESONICE.TextureWood" : "Wood",
-    "DICESONICE.TextureMetal" : "Metallo",
+    "DICESONICE.TextureMetal" : "Metal",
     "DICESONICE.TextureNone" : "None / Auto (Theme)",
     "DICESONICE.TextureRadial" : "Radial",
     "DICESONICE.ColorRadiant" : "Radiant",
