--- a/module/lang/en.json
+++ b/module/lang/en.json
@@ -92,5 +92,6 @@
     "DICESONICE.Colors" : "Colors",
 
     "DICESONICE.System.Standard" : "Standard",
-    "DICESONICE.System.Dot" : "Dot"
+    "DICESONICE.System.Dot" : "Dot (White)",
+    "DICESONICE.System.DotBlack" : "Dot (Black)"
 }
