- diceSoNiceRollStart hook added - updated italian translation

--- a/module/lang/it.json
+++ b/module/lang/it.json
@@ -30,11 +30,11 @@
     "DICESONICE.High" : "Alta",
     "DICESONICE.shadowQuality" : "Qualità Ombre",
     "DICESONICE.sounds" : "Effetti Sonori",
-    "DICESONICE.system" : "Dice Presets (Faces)",
-    "DICESONICE.maxDiceNumber" : "Max Number of Dice",
-    "DICESONICE.maxDiceNumberHint" : "Maximum number of displayed dice in an animation. Higher numbers will reduce performances",
-    "DICESONICE.saveMessage": "Updated 3D Dice Settings Configuration",
-    "DICESONICE.migrateMessage": "'Dice So Nice' setting was successfully migrated to 2.0 version!",
+    "DICESONICE.system" : "Collezione",
+    "DICESONICE.maxDiceNumber" : "Num. Massimo Dadi",
+    "DICESONICE.maxDiceNumberHint" : "Numero massimo di dadi visualizzati in un'animazione. Numeri alti ridurranno le prestazioni",
+    "DICESONICE.saveMessage": "Impostazioni Dadi 3D Salvata Correttamente!",
+    "DICESONICE.migrateMessage": "Le impostazioni di 'Dice So Nice' sono state migrate alla versione 2.0 con successo!",
 
     "DICESONICE.TextureClouds" : "Nuvole",
     "DICESONICE.TextureFire" : "Fuoco",
@@ -57,18 +57,18 @@
     "DICESONICE.TextureNone" : "Nessuna/Auto (Tema)",
     "DICESONICE.TextureRadial" : "Radial",
     "DICESONICE.ColorRadiant" : "Radiant",
-    "DICESONICE.ColorFire" : "Fire",
-    "DICESONICE.ColorIce" : "Ice",
-    "DICESONICE.ColorPoison" : "Poison",
-    "DICESONICE.ColorAcid" : "Acid",
-    "DICESONICE.ColorThunder" : "Thunder",
-    "DICESONICE.ColorLightning" : "Lightning",
-    "DICESONICE.ColorAir" : "Air",
-    "DICESONICE.ColorWater" : "Water",
-    "DICESONICE.ColorEarth" : "Earth",
-    "DICESONICE.ColorForce" : "Force",
-    "DICESONICE.ColorPsychic" : "Psychic",
-    "DICESONICE.ColorNecrotic" : "Necrotic",
+    "DICESONICE.ColorFire" : "Fuoco",
+    "DICESONICE.ColorIce" : "Ghiaccio",
+    "DICESONICE.ColorPoison" : "Veleno",
+    "DICESONICE.ColorAcid" : "Acido",
+    "DICESONICE.ColorThunder" : "Tuono",
+    "DICESONICE.ColorLightning" : "Fulmine",
+    "DICESONICE.ColorAir" : "Aria",
+    "DICESONICE.ColorWater" : "Acqua",
+    "DICESONICE.ColorEarth" : "Terra",
+    "DICESONICE.ColorForce" : "Forza",
+    "DICESONICE.ColorPsychic" : "Psichico",
+    "DICESONICE.ColorNecrotic" : "Necrotico",
     "DICESONICE.ColorPastelSunset" : "Pastel Sunset",
     "DICESONICE.ColorPinkDreams" : "Pink Dreams",
     "DICESONICE.ColorInspired" : "Inspired",
@@ -86,7 +86,7 @@
     "DICESONICE.ColorFoundry" : "Foundry VTT",
 
     "DICESONICE.DamageTypes" : "Tipo Danno",
-    "DICESONICE.ThemesSoNice" : "Temi Molto Belli",
+    "DICESONICE.ThemesSoNice" : "Temi Veramente Belli",
     "DICESONICE.AcquiredTaste" : "Un Tocco di Gusto",
     "DICESONICE.Colors" : "Colori",
 
