- updated italian translation

--- a/module/lang/it.json
+++ b/module/lang/it.json
@@ -29,6 +29,7 @@
     "DICESONICE.Low" : "Bassa",
     "DICESONICE.High" : "Alta",
     "DICESONICE.shadowQuality" : "Qualità Ombre",
+    "DICESONICE.bumpMapping" : "Iluminazione Avanzata",
     "DICESONICE.sounds" : "Effetti Sonori",
     "DICESONICE.system" : "Collezione",
     "DICESONICE.maxDiceNumber" : "Num. Massimo Dadi",
