--- a/module/lang/pt-BR.json
+++ b/module/lang/pt-BR.json
@@ -19,5 +19,78 @@
     "DICESONICE.fps": "Max FPS",
     "DICESONICE.Save": "Salvar",
     "DICESONICE.Apply": "Aplicar"
+    "DICESONICE.outlineColor": "Cor do Contorno",
+    "DICESONICE.edgeColor": "Cor das Bordas",
+    "DICESONICE.texture": "Textura",
+    "DICESONICE.colorset" : "Tema",
+    "DICESONICE.colorsetDesc" : "Se você preferir uma cor personalizada, selecione 'Personalizada' na lista",
+    "DICESONICE.Low" : "Baixa",
+    "DICESONICE.High" : "Alta",
+    "DICESONICE.shadowQuality" : "Qualidade das Sombras",
+    "DICESONICE.bumpMapping" : "Iluminação Avançada",
+    "DICESONICE.sounds" : "Efeitos de Som",
+    "DICESONICE.system" : "Esquema do Dado (Faces)",
+    "DICESONICE.maxDiceNumber" : "Numero Máximo de Dados",
+    "DICESONICE.maxDiceNumberHint" : "Numero máximo de dados a serem exibidos em uma animação. Um valor alto irá reduzir a performance",
+    "DICESONICE.saveMessage": "Atualizar as Definições de Configuração dos Dados 3D",
+    "DICESONICE.migrateMessage": "Configurações do 'Dice So Nice' migrados com sucesso apra a versão 2.0!",
+
+    "DICESONICE.TextureClouds" : "Nuvens",
+    "DICESONICE.TextureFire" : "Fogo",
+    "DICESONICE.TextureMarble" : "Marmore",
+    "DICESONICE.TextureWater" : "Água",
+    "DICESONICE.TextureIce" : "Gelo",
+    "DICESONICE.TexturePaper" : "Papel",
+    "DICESONICE.TextureSpeckles" : "Granulados",
+    "DICESONICE.TextureGlitter" : "Brilhos",
+    "DICESONICE.TextureGlitterTransparent" : "Brilhos (Transparente)",
+    "DICESONICE.TextureStars" : "Estrelas",
+    "DICESONICE.TextureStainedGlass" : "Vitral",
+    "DICESONICE.TextureSkulls" : "Cranios",
+    "DICESONICE.TextureLeopard" : "Leopardo",
+    "DICESONICE.TextureTiger" : "Tigre",
+    "DICESONICE.TextureCheetah" : "Guepardo",
+    "DICESONICE.TextureAstralSea" : "Mar Astral",
+    "DICESONICE.TextureWood" : "Madeira",
+    "DICESONICE.TextureMetal" : "Metal",
+    "DICESONICE.TextureNone" : "Nenhum / Auto (Tema)",
+    "DICESONICE.TextureRadial" : "Radial",
+    "DICESONICE.ColorRadiant" : "Radiante",
+    "DICESONICE.ColorFire" : "Ígneo",
+    "DICESONICE.ColorIce" : "Gélido",
+    "DICESONICE.ColorPoison" : "Venenoso",
+    "DICESONICE.ColorAcid" : "Ácido",
+    "DICESONICE.ColorThunder" : "Trovejante",
+    "DICESONICE.ColorLightning" : "Elétrico",
+    "DICESONICE.ColorAir" : "Vento",
+    "DICESONICE.ColorWater" : "Água",
+    "DICESONICE.ColorEarth" : "Terra",
+    "DICESONICE.ColorForce" : "Energético",
+    "DICESONICE.ColorPsychic" : "Psiquico",
+    "DICESONICE.ColorNecrotic" : "Necrótico",
+    "DICESONICE.ColorPastelSunset" : "Por do Sol",
+    "DICESONICE.ColorPinkDreams" : "Sonhos Rosas",
+    "DICESONICE.ColorInspired" : "Inspirado",
+    "DICESONICE.ColorBloodMoon" : "Lua Sangrenta",
+    "DICESONICE.ColorStaryNight" : "Noite Estrelada",
+    "DICESONICE.ColorGlitterParty" : "Festa de Brilhos",
+    "DICESONICE.ColorAstralSea" : "Mar Astral",
+    "DICESONICE.ColorTigerKing" : "Rei Tigre",
+    "DICESONICE.ColorToxic" : "Tóxico",
+    "DICESONICE.ColorRainblow" : "Arco-Íris",
+    "DICESONICE.ColorRaNdOm" : "Aleátorio",
+    "DICESONICE.ColorBlack" : "Preto",
+    "DICESONICE.ColorWhite" : "Branco",
+    "DICESONICE.ColorCustom" : "Personalizada",
+    "DICESONICE.ColorFoundry" : "Foundry VTT",
+
+    "DICESONICE.DamageTypes" : "tipos de Dano",
+    "DICESONICE.ThemesSoNice" : "Temas Tão Legais",
+    "DICESONICE.AcquiredTaste" : "Gosto Adiquirido",
+    "DICESONICE.Colors" : "Cores",
+
+    "DICESONICE.System.Standard" : "Padrão",
+    "DICESONICE.System.Dot" : "Pontos (Brancos)",
+    "DICESONICE.System.DotBlack" : "Pontos (Negros)"
 
 }
