Added translation labels

--- a/module/lang/en.json
+++ b/module/lang/en.json
@@ -58,6 +58,12 @@
     "DICESONICE.TextureMetal" : "Metal",
     "DICESONICE.TextureNone" : "None / Auto (Theme)",
     "DICESONICE.TextureRadial" : "Radial",
+    "DICESONICE.TextureBronze1" : "Bronze - 1",
+    "DICESONICE.TextureBronze2" : "Bronze - 2",
+    "DICESONICE.TextureBronze3" : "Bronze - 3",
+    "DICESONICE.TextureBronze3a" : "Bronze - 3 bis",
+    "DICESONICE.TextureBronze3b" : "Bronze - 3 ter",
+    "DICESONICE.TextureBronze4" : "Bronze - 4",
     "DICESONICE.ColorRadiant" : "Radiant",
     "DICESONICE.ColorFire" : "Fire",
     "DICESONICE.ColorIce" : "Ice",
