Multiple suggested features and tweaks

--- a/module/lang/en.json
+++ b/module/lang/en.json
@@ -14,6 +14,7 @@
     "DICESONICE.None": "None",
     "DICESONICE.FadeOut": "FadeOut",
     "DICESONICE.speed": "Animation Speed",
+    "DICESONICE.PlayerSpeed" : "Players' choice",
     "DICESONICE.NormalSpeed": "Normal",
     "DICESONICE.2xSpeed": "2x",
     "DICESONICE.3xSpeed": "3x",
@@ -24,6 +25,7 @@
     "DICESONICE.outlineColor": "Outline Color",
     "DICESONICE.edgeColor": "Edge Color",
     "DICESONICE.texture": "Texture",
+    "DICESONICE.material": "Material",
     "DICESONICE.colorset" : "Theme",
     "DICESONICE.colorsetDesc" : "If you prefer a custom color, select 'Custom' in this list",
     "DICESONICE.Low" : "Low",
@@ -36,6 +38,10 @@
     "DICESONICE.maxDiceNumberHint" : "Maximum number of displayed dice in an animation. Higher numbers will reduce performances",
     "DICESONICE.saveMessage": "Updated 3D Dice Settings Configuration",
     "DICESONICE.migrateMessage": "'Dice So Nice' setting was successfully migrated to 2.0 version!",
+    "DICESONICE.diceCanBeFlipped": "Dice can be flipped",
+    "DICESONICE.diceCanBeFlippedHint": "When a die has finished rolling, can it be flipped by newly added rolling dice (This does not change the result).",
+    "DICESONICE.globalAnimationSpeed": "Global animation speed",
+    "DICESONICE.globalAnimationSpeedHint": "Set the animation speed for all players instead of using their own settings (Players client refresh needed to take effect)",
 
     "DICESONICE.TextureClouds" : "Clouds",
     "DICESONICE.TextureCloudsTransparent" : "Clouds (Transparent)",
@@ -101,6 +107,12 @@
     "DICESONICE.ThemesSoNice" : "Themes So Nice",
     "DICESONICE.AcquiredTaste" : "Acquired Taste",
     "DICESONICE.Colors" : "Colors",
+
+    "DICESONICE.MaterialPlastic": "Plastic",
+    "DICESONICE.MaterialMetal": "Metal",
+    "DICESONICE.MaterialGlass": "Glass",
+    "DICESONICE.MaterialWood": "Wood",
+    "DICESONICE.MaterialAuto": "Auto (Theme/Texture)",
 
     "DICESONICE.System.Standard" : "Standard",
     "DICESONICE.System.Dot" : "Dot (White)",
