--- a/module/lang/en.json
+++ b/module/lang/en.json
@@ -42,6 +42,8 @@
     "DICESONICE.diceCanBeFlippedHint": "When a die has finished rolling, can it be flipped by newly added rolling dice (This does not change the result).",
     "DICESONICE.globalAnimationSpeed": "Global animation speed",
     "DICESONICE.globalAnimationSpeedHint": "Set the animation speed for all players instead of using their own settings (Players client refresh needed to take effect)",
+    "DICESONICE.disabledDuringCombat": "Disabled during combat",
+    "DICESONICE.disabledDuringCombatHint": "Disable 3D dice roll animations while a combat is active.",
 
     "DICESONICE.TextureClouds" : "Clouds",
     "DICESONICE.TextureCloudsTransparent" : "Clouds (Transparent)",
