--- a/module/lang/en.json
+++ b/module/lang/en.json
@@ -3,6 +3,9 @@
     "DICESONICE.configTitle": "3D Dice Settings",
     "DICESONICE.configHint": "Configure settings for 3D dice such as colors and size",
 
+    "DICESONICE.settingsAppearance": "Appearance settings",
+    "DICESONICE.settingsPlayerPreferences": "Preference settings",
+    "DICESONICE.settingsPerformance": "Performance settings",
     "DICESONICE.enable": "Enable 3D Dice",
     "DICESONICE.labelColor": "Label Color",
     "DICESONICE.diceColor": "Dice Color",
