Added fr.json. Fix to en.json. Prepare module.json for future release

--- a/module/lang/en.json
+++ b/module/lang/en.json
@@ -3,9 +3,9 @@
     "DICESONICE.configTitle": "3D Dice Settings",
     "DICESONICE.configHint": "Configure settings for 3D dice such as colors and size",
 
-    "DICESONICE.settingsAppearance": "Appearance settings",
-    "DICESONICE.settingsPlayerPreferences": "Preference settings",
-    "DICESONICE.settingsPerformance": "Performance settings",
+    "DICESONICE.settingsAppearance": "Appearance",
+    "DICESONICE.settingsPlayerPreferences": "Preferences",
+    "DICESONICE.settingsPerformance": "Performance",
     "DICESONICE.enable": "Enable 3D Dice",
     "DICESONICE.labelColor": "Label Color",
     "DICESONICE.diceColor": "Dice Color",
@@ -105,7 +105,7 @@
     "DICESONICE.ColorRaNdOm" : "Random",
     "DICESONICE.ColorBlack" : "Black",
     "DICESONICE.ColorWhite" : "White",
-    "DICESONICE.ColorCustom" : "Custom",
+    "DICESONICE.ColorCustom" : "- Custom -",
     "DICESONICE.ColorFoundry" : "Foundry VTT",
     "DICESONICE.ColorBronze" : "Thylean Bronze",
     "DICESONICE.ColorDragons" : "Here be Dragons",
